[gd_scene load_steps=3 format=3 uid="uid://0jh6pi8pamc0"]

[ext_resource type="Script" path="res://scripts/level_ui.gd" id="1_irwqv"]
[ext_resource type="Theme" uid="uid://c7fwm4sb4mhlh" path="res://assets/ui_theme.tres" id="2_dj7k3"]

[node name="LevelUI" type="Control"]
process_mode = 3
z_index = 50
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_irwqv")

[node name="StartBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 38.0
offset_right = 106.0
offset_bottom = 76.0
theme = ExtResource("2_dj7k3")
text = "Start"

[node name="ResetBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 99.0
offset_right = 107.0
offset_bottom = 137.0
theme = ExtResource("2_dj7k3")
text = "Reset"

[connection signal="pressed" from="StartBtn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="ResetBtn" to="." method="_on_reset_btn_pressed"]
